--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -63,7 +63,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string notr="true">2.1.1:BETA</string>
+          <string notr="true">4.1.1 : Fire</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -92,7 +92,7 @@
        </property>
        <property name="text">
         <string>Copyright © 2009-2014 The Bitcoin developers
-Copyright © 2014 The KoreCoin 2.0 developers</string>
+Copyright © 2015 The KoreCoin 4.0 developers</string>
        </property>
        <property name="textInteractionFlags">
         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
